--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,9 +1,18 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "Talks and Presentations"
 permalink: /talks/
 author_profile: true
 ---
+
+Presentations
+<ul>
+  <li><b>ARIA Showcase 2019</b><br />
+    <b>Title: </b>Average Reward Reinforcement Learning for System Optimization in Robotics Application<br />
+    This project was done at Kindred AI during my MScAC internship. We developed a method to leverage 
+    model-based RL to optimize for a continual process formulated under the average reward setting.
+  </li>
+</ul>
 
 {% if site.talkmap_link == true %}
 
