--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -4,7 +4,7 @@ title: "Teaching"
 permalink: /teaching/
 author_profile: true
 ---
-I like to educate others about what I have learned so far about academic and life in general. I'm very grateful to have a lot of teaching experience at UTSC since I started undergrad. Hopefully I made positive influences on all my past students!
+I like to educate others about what I have learned so far about academic and life in general. I'm very grateful to have a lot of teaching experience at UTSC since I started undergrad. Hopefully I have made positive influences on all my past students so far!
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
