--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -6,13 +6,11 @@ author_profile: true
 ---
 
 Presentations
-<ul>
-  <li><b>ARIA Showcase 2019</b><br />
-    <b>Title: </b>Average Reward Reinforcement Learning for System Optimization in Robotics Application<br />
-    This project was done at Kindred AI during my MScAC internship. We developed a method to leverage 
-    model-based RL to optimize for a continual process formulated under the average reward setting.
-  </li>
-</ul>
+<b>ARIA Showcase 2019</b><br />
+<b>Title: </b>Average Reward Reinforcement Learning for System Optimization in Robotics Application<br />
+This project was done at Kindred AI during my MScAC internship. We developed a method to leverage 
+model-based RL to optimize for a continual process formulated under the average reward setting.<br />
+<img src="/images/eigentermination.png" width="500"/>
 
 {% if site.talkmap_link == true %}
 
