--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,9 +5,7 @@ permalink: /talks/
 author_profile: true
 ---
 
-Presentations
-<b>ARIA Showcase 2019</b><br />
-<b>Title: </b>Average Reward Reinforcement Learning for System Optimization in Robotics Application<br />
+<b>ARIA Showcase 2019 - Average Reward Reinforcement Learning for System Optimization in Robotics Application</b><br />
 This project was done at Kindred AI during my MScAC internship. We developed a method to leverage 
 model-based RL to optimize for a continual process formulated under the average reward setting.<br />
 <img src="/images/eigentermination.png" width="500"/>
