--- a/_pages/blogs.html
+++ b/_pages/blogs.html
@@ -7,6 +7,6 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.blogs reversed %}
+{% for post in site.blogs %}
   {% include archive-single.html %}
 {% endfor %}
