--- a/_pages/personal_blogs.html
+++ b/_pages/personal_blogs.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
-title: "Blogs"
-permalink: /blogs/
+title: "Personal Blogs"
+permalink: /personal_blogs/
 author_profile: true
 ---
 
 {% include base_path %}
 
-{% for post in site.blogs %}
+{% for post in site.personal_blogs %}
   {% include archive-single.html %}
 {% endfor %}
